# 550.15.02.SKE

./: .gitignore  HANDOFF.md  PIPELINE_REVIEW_AND_AUTOMATION_PLAN.md
20251114/: full_states_log_2025-11-14.json  raw_data.csv
20251208/: oil_market_lexicon_v3.json  원유 Report 프롬프트_251208.docx
20260116/: 유가 예측_정리 및 프롬프트_260111.md  유가전망 기반 모델 보고서_설명자료_260116_NEW.docx
20260116/.claude/: settings.local.json
Archive/Code/oil_forecast_report/: pyproject.toml  ske_report_requirements.txt
Archive/Code/oil_forecast_report/eval_results/Brent crude oil price/MarketAgentsStrategy_logs/: full_states_log_2025-12-08.json
Archive/Code/oil_forecast_report/marketagents/: default_config.py
Archive/Code/oil_forecast_report/marketagents/agents/analysts/: fundamentals_analyst.py  market_analyst.py
Archive/Code/oil_forecast_report/marketagents/agents/managers/: risk_manager.py
Archive/Code/oil_forecast_report/marketagents/agents/researchers/: bear_researcher.py
Archive/Code/oil_forecast_report/marketagents/agents/trader/: trader.py
Archive/Code/oil_forecast_report/marketagents/agents/utils/: agent_states.py  agent_utils.py
Archive/Code/oil_forecast_report/marketagents/agents/writers/: base_writer.py
Archive/Code/oil_forecast_report/marketagents/data/: recent_x_data.csv
Archive/Code/oil_forecast_report/marketagents/dataflows/: __init__.py  googlenews_utils.py  interface.py
Archive/Code/oil_forecast_report/marketagents/graph/: __init__.py  setup.py  signal_processing.py
Archive/Code/oil_forecast_report/marketagents/graph/prompts/: introduction.txt  main_body.txt
(+119 files in other folders)
