[project]
name = "oil-forecast-report"
version = "0.1.0"
description = "AI-powered oil price forecast report generator using multi-agent system"
requires-python = ">=3.10"
dependencies = [
    # Environment
    "python-dotenv",

    # LangChain ecosystem
    "langchain",
    "langchain-core",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-google-genai",
    "langgraph",
    "langsmith",

    # Data processing
    "pandas",
    "yfinance",

    # Web scraping
    "requests",
    "beautifulsoup4",
    "tenacity",

    # Vector database
    "chromadb",

    # APIs
    "openai",

    # Utilities
    "python-dateutil",
    "tqdm",
    "typing_extensions",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
